--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ python==3.8.5
 pytorch==1.5.1 
 torchvision==0.6.1
 pyyaml==5.4.1
-soundfile
+soundfile==0.10.3
 tensorboardX==2.1
 matplotlib==3.2.2
