update README file

--- a/train_RawNet.yaml
+++ b/train_RawNet.yaml
@@ -15,7 +15,7 @@ model:
   nb_samp: 64600
   first_conv: 128   # no. of filter coefficients 
   in_channels: 1
-  filts: [128, [128, 128], [128, 512], [512, 512]]
+  filts: [128, [128, 128], [128, 512], [512, 512]] # no. of filters channel in residual blocks
   blocks: [2, 4]
   nb_fc_node: 1024
   gru_node: 1024
